# MarkdownTable

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TEST.md  TEST_OUTPUT.md  install.sh  main.cpp  main2.cpp
Src/: CMakeLists.txt  LittleArgsParser  Log.hpp  MarkdownIndex.cpp  MarkdownIndex.hpp  MdTypes.cpp  MdTypes.hpp  Slugger.cpp  Slugger.hpp  Utils.cpp  Utils.hpp
Src/PerfTools/: CMakeLists.txt  ScopeTimer.cpp  ScopeTimer.h  Utils.cpp  Utils.h
Tests/: CMakeLists.txt  firstTest.cpp  secondTest.cpp  test_md_insertTableInFile.cpp  test_md_parseFile.cpp  test_md_parseLine.cpp  test_md_parseStr.cpp  test_md_slugify.cpp  test_md_slugifyList.cpp
Tests/Inputs/: Test.md  Test_0.md  Test_complex.md  Test_complex_0.md  Test_complex_ref.md
cmake/: Packing.cmake  Toolchain_win64.cmake
